kubernetes/monitoring/cms-htcondor-es.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cms-htcondor-es
  labels:
     app: cms-htcondor-es
spec:
   replicas: 1
   selector:
     matchLabels:
       app: cms-htcondor-es
   template:
      metadata:
         labels:
           app: cms-htcondor-es
      spec:
        containers:
        - args:
          - --feed_amq
          - --process_queue
          - --query_pool_size=1
          - --upload_pool_size=1
          - --email_alerts='cms-comp-monit-alerts@cern.ch'
          - --collectors_file=/etc/spider/collectors.json
          - --dry_run
          name: cms-htcondor-es
          image: veknet/cms-htcondor-es
          volumeMounts:
          - name: spider-secrets
            mountPath: /etc/spider
            readOnly: true
        volumes:
        - name: spider-secrets
          secret:
            secretName: spider-secrets
