kubernetes/monitoring/prom-oper.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: prometheus
spec:
  type: NodePort
  ports:
  - name: web
    nodePort: 31900
    port: 9090
    protocol: TCP
    targetPort: web
  selector:
    prometheus: prometheus
