kubernetes/monitoring/ing.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
  - host: cms-monitoring.cern.ch
    http:
      paths:
      - path: /prometheus
        backend:
          serviceName: prometheus
          servicePort: 9090
      - path: /pushgateway
        backend:
          serviceName: pushgateway
          servicePort: 9091
